--- a/liff/index.html
+++ b/liff/index.html
@@ -24,7 +24,7 @@
   <!-- LIFF Setup -->
     <script>
         (async function () {
-        await liff.init({liffId: LIFF_ID})
+        await liff.init({liffId: "1661034918-8pzaYWXE"})
         if (!liff.isLoggedIn()) {
             liff.login();
         }
