--- a/liff/confirm.html
+++ b/liff/confirm.html
@@ -12,14 +12,11 @@
     <h1>LIFF EXAMPLE</h1>
 
     <p>
-      <span id="line-name"></span> さんのTODO
+      入力情報の確認
     </p>
 
-    <form action="/confirm" method="post">
-        <input type="text" name="name">
-        <input type="date" name="date">
-        <input type="submit" value="送信する">
-    </form>
+    <p>名前:<%= name %></p>
+    <p>日付:<%= date %></p>
 
     <form>
   </div>
