--- a/liff/index.html
+++ b/liff/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>LIFF EXAMPLE</h1>
+    <h1>LIFF EXAMPLE HTML</h1>
 
     <p>
       <span id="line-name"></span> さんのTODO
