--- a/liff/index.html
+++ b/liff/index.html
@@ -15,7 +15,7 @@
       <span id="line-name"></span> さんのTODO
     </p>
 
-    <form action="/liff/confirm" method="post">
+    <form action="/confirm" method="post">
         <input type="text" name="name">
         <input type="date" name="date">
         <input type="submit" value="送信する">
