--- a/liff/index.html
+++ b/liff/index.html
@@ -3,25 +3,55 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LIFF Handson</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+  <title>予約情報入力画面</title>
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="../scss/style.css">
+  <link href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" rel="stylesheet">
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/config.js" charset="utf-8"></script>
 </head>
 <body>
-  <div class="container">
-    <h1>LIFF EXAMPLE HTML</h1>
-
-    <p>
-      <span id="line-name"></span> さんのTODO
-    </p>
+  <div class="container liff">
 
     <form action="/confirm" method="post">
-        <input type="text" name="name">
-        <input type="date" name="date">
-        <input type="submit" value="送信する">
+
+      <div class="form-question">
+
+        <div class="form-question-title">
+          <p>お名前</p>
+          <p>必須</p>
+        </div>
+
+        <input type="text" name="name" placeholder="佐藤太郎">
+
+      </div>
+
+      <div class="form-question">
+
+        <div class="form-question-title">
+          <p>メールアドレス</p>
+          <p>必須</p>
+        </div>
+
+        <input type="email" name="email" placeholder="example@example.com">
+        
+      </div>
+
+      <div class="form-question">
+
+        <div class="form-question-title">
+          <p>電話番号</p>
+          <p>必須</p>
+        </div>
+
+        <input type="tel" name="tel" placeholder="01234567890">
+        
+      </div>
+
     </form>
 
-    <form>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
