--- a/liff/index.html
+++ b/liff/index.html
@@ -50,6 +50,10 @@
         
       </div>
 
+      <div class="form-submit">
+        <input type="submit" value="送信する">
+      </div>
+
     </form>
 
   </div>
