--- a/liff/index.html
+++ b/liff/index.html
@@ -68,7 +68,7 @@
           <p>必須</p>
         </div>
 
-        <select name="example">
+        <select name="time">
           <option value="0">9:00～10:00</option>
           <option value="1">10:00～11:00</option>
           <option value="2">11:00～12:00</option>
